--- a/RareRacing.html
+++ b/RareRacing.html
@@ -19,7 +19,7 @@
       <h3 style="text-align:center">Info</h3>
       <p style="text-align: center;"><b>Rare Racing</b></p>
       <p>-<b>Giới thiệu</b>: Lần đầu làm đua xe</p>
-      <p>-<b>Phiên bản</b>: Beta</p>
+      <p>-<b>Phiên bản</b>: 1.0</p>
       <p>-<b>Phát hành</b>: 09/11/2024</p>
       <p>-<b>Last Update</b>: 09/11/2024</p>
       <p>-<b>Thể loại</b>: Solo, Racing</p>
