--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="card shadow-sm styleNew">
               <img src="img/rareracing/Screenshot 09-11-2024 102916.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-info reggae-one-regular gameTitle">Rare Racing (Beta)</h3>
+                <h3 class="text-info reggae-one-regular gameTitle">Rare Racing</h3>
                 <p class="card-text"></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
