--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
   <main class="">
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
-        <div class="carousel-item">
-          <img src="img/spikefall/Screenshot 06-10-2024 085829.jpg" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/gtm/Screenshot 16-11-2024 105010.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
 
           </div>
         </div>
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <img src="img/rareracing/Screenshot 09-11-2024 102916.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
 
@@ -129,13 +129,14 @@
 
           <div class="col">
             <div class="card shadow-sm styleBig">
-              <img src="img/everlastingstar/Screenshot 06-10-2024 225735.jpg" height="225"> 
+              <img src="img/gtm/Screenshot 16-11-2024 105010.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-danger reggae-one-regular gameTitle">Everlasting Star (Soon)</h3>
+                <h4 class="text-danger reggae-one-regular gameTitle">Grand Thief Manual (Beta)</h4>
                 <p class="card-text"></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="EverlastingStar.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="GrandThiefManual.htmll"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/grand-thief-manual?secret=wi8uIchmwFkTruyz2VbXt9RTh4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
