--- a/GrandThiefManual.html
+++ b/GrandThiefManual.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/style2.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png">
-    <title>Everlasting Star</title>
+    <title>Grand Thief Manual</title>
 </head>
 <body>
 <div class="row">
@@ -17,18 +17,19 @@
     </div>
     <div class="bg-danger-subtle infoGame">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>Everlasting Star</b></p>
-      <p>-<b>Giới thiệu</b>: Bắt đầu cuộc khám phá ở thế giới Stala</p>
+      <p style="text-align: center;"><b>Grand Thief Manual</b></p>
+      <p>-<b>Giới thiệu</b>: Dấn chân vào thế giới GTM</p>
       <p>-<b>Phiên bản</b>: Beta</p>
-      <p>-<b>Phát hành</b>: ?</p>
-      <p>-<b>Last Update</b>: ?</p>
+      <p>-<b>Phát hành</b>: 16/11/2024</p>
+      <p>-<b>Last Update</b>: 16/11/2024</p>
       <p>-<b>Thể loại</b>: Singleplayer</p>
       <p>-<b>Available</b>: PC</p>
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
       <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
-      <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
+        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/dont-stop?secret=Ug9tLZZ9RyFDolPJHfuSvsdKbfQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+        <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
 <div id="carouselExampleIndicators" class="bg-dark carousel slide col-md-10 bg-dark col-md-2">
@@ -37,7 +38,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/everlastingstar/Screenshot 06-10-2024 225735.jpg" class="d-block w-100" alt="...">
+      <img src="img/gtm/Screenshot 16-11-2024 105010.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
