--- a/RedAndBlue.html
+++ b/RedAndBlue.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/style2.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png">
-    <title>Panic Pictures</title>
+    <title>Red & Blue</title>
 </head>
 <body>
 <div class="row">
@@ -17,18 +17,18 @@
     </div>
     <div class="bg-danger-subtle infoGame">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>Panic Pictures</b></p>
-      <p>-<b>Giới thiệu</b>: Trộm số nhọ nhất năm</p>
+      <p style="text-align: center;"><b>Red & Blue</b></p>
+      <p>-<b>Giới thiệu</b>: Game nhái cậu bé lửa và cô bé nước</p>
       <p>-<b>Phiên bản</b>: 1.0</p>
-      <p>-<b>Phát hành</b>: 17/11/2024</p>
-      <p>-<b>Last Update</b>: 17/11/2024</p>
-      <p>-<b>Thể loại</b>: Horror</p>
+      <p>-<b>Phát hành</b>: 22/11/2024</p>
+      <p>-<b>Last Update</b>: 22/11/2024</p>
+      <p>-<b>Thể loại</b>: Co-op</p>
       <p>-<b>Available</b>: PC</p>
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
       <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
-        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/panic-putures?secret=r0TKI7eC3LxEWXJzhOU4auOBgvk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/red-blue?secret=3dpMekGGLocO7gix5JPdnudRHI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
         <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
@@ -38,7 +38,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/panicpictures/462568105_1625317988058233_5191426092903613004_n.png" class="d-block w-100" alt="...">
+      <img src="img/redandblue/bKwaDZ.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
