--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
   <main class="">
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
-        <div class="carousel-item">
-          <img src="img/gtm/Screenshot 16-11-2024 105010.jpg" class="d-block w-100 styleSlide" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="img/rareracing/Screenshot 09-11-2024 102916.jpg" class="d-block w-100 styleSlide" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-
-          </div>
-        </div>
         <div class="carousel-item active">
+          <img src="img/highparkour/Screenshot 22-11-2024 191934.jpg" class="d-block w-100 styleSlide" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/redandblue/bKwaDZ.png" class="d-block w-100 styleSlide" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+
+          </div>
+        </div>
+        <div class="carousel-item">
           <img src="img/panicpictures/462568105_1625317988058233_5191426092903613004_n.png" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
 
@@ -146,6 +146,40 @@
 
           <div class="col">
             <div class="card shadow-sm styleNew">
+              <img src="img/highparkour/Screenshot 22-11-2024 191934.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info reggae-one-regular gameTitle">High Parkour</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="PanicPictures.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/high-parkour?secret=X4EgG4LYhHHkWHBoPsAhbyzMQa8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/redandblue/bKwaDZ.png" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info reggae-one-regular gameTitle">Red & Blue</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="PanicPictures.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/red-blue?secret=3dpMekGGLocO7gix5JPdnudRHI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
               <img src="img/panicpictures/462568105_1625317988058233_5191426092903613004_n.png" height="225"> 
               <div class="card-body">
                 <h3 class="text-info reggae-one-regular gameTitle">Panic Pictures</h3>
@@ -171,92 +205,6 @@
                   <div class="btn-group">
                     <a href="RareRacing.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/rare?secret=PFDtJCQQ4dXhSlOk0EDcKMA4o20" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/chessk/Screenshot 06-10-2024 084503.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info reggae-one-regular gameTitle">Chess K</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="ChessK.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/chess-k?secret=JXcYMN9mzhDTMfSMhrJT0OEIpQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-          
-          <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/spikefall/Screenshot 06-10-2024 085829.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info reggae-one-regular gameTitle">Spikefall</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="Spikefall.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/spikefall?secret=QNudGgmsrOxnJAlj8Bn4NKyYf2A" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                    <a href="download/Spikefall.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/dontstop/Screenshot 02-10-2024 174104.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info reggae-one-regular gameTitle">Don't Stop</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="DontStop.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/dont-stop?secret=Ug9tLZZ9RyFDolPJHfuSvsdKbfQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/searchpoint/Screenshot 18-09-2024 224757.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info reggae-one-regular gameTitle">Search Point</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="SearchPoint.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="download/Search Point.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/rhymix/Screenshot 14-09-2024 200522.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info reggae-one-regular gameTitle">Rhymix</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="Rhymix.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/rhymix?secret=l4Mcj77vA3MlAVcGnqjnhWe2k" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -437,6 +385,92 @@
                     <a href="download/KOutplayed!.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free </small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/chessk/Screenshot 06-10-2024 084503.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="reggae-one-regular gameTitle">Chess K</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="ChessK.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/chess-k?secret=JXcYMN9mzhDTMfSMhrJT0OEIpQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/spikefall/Screenshot 06-10-2024 085829.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="reggae-one-regular gameTitle">Spikefall</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="Spikefall.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/spikefall?secret=QNudGgmsrOxnJAlj8Bn4NKyYf2A" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="download/Spikefall.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/dontstop/Screenshot 02-10-2024 174104.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="reggae-one-regular gameTitle">Don't Stop</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="DontStop.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/dont-stop?secret=Ug9tLZZ9RyFDolPJHfuSvsdKbfQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/searchpoint/Screenshot 18-09-2024 224757.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="reggae-one-regular gameTitle">Search Point</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="SearchPoint.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="download/Search Point.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/rhymix/Screenshot 14-09-2024 200522.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="reggae-one-regular gameTitle">Rhymix</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="Rhymix.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/rhymix?secret=l4Mcj77vA3MlAVcGnqjnhWe2k" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
