--- a/index.html
+++ b/index.html
@@ -129,6 +129,23 @@
 
           <div class="col">
             <div class="card shadow-sm styleBig">
+              <img src="img/truykid/Screenshot 24-11-2024 081220.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-danger reggae-one-regular gameTitle">Truy Kid</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="TruyKid.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/truy-kid?secret=h3c0pPvFZDKMpO7NC8X9WXU1XU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleBig">
               <img src="img/gtm/Screenshot 16-11-2024 105010.jpg" height="225"> 
               <div class="card-body">
                 <h4 class="text-danger reggae-one-regular gameTitle">Grand Thief Manual (Beta)</h4>
@@ -294,23 +311,6 @@
                     <a href="ZombieHunter.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/zombie-hunter?secret=XR3MdPznFBKgdnFD0Ctm5qMjo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/zombie-hunter-web?secret=OOJhKhAJc8twYeJUgw0STtXu0E" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleHot">
-              <img src="img/truykid/Screenshot 19-05-2024 213304.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-warning reggae-one-regular gameTitle">Truy Kid</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="TruyKid.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/truy-kid?secret=h3c0pPvFZDKMpO7NC8X9WXU1XU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
