--- a/ZombieHunter.html
+++ b/ZombieHunter.html
@@ -29,7 +29,7 @@
       <h3 style="text-align:center">Link</h3>
       <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
         <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/zombie-hunter?secret=XR3MdPznFBKgdnFD0Ctm5qMjo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-          <p>-<b>Play Now</b> <a href="ttps://kiga-studio.itch.io/zombie-hunter-web?secret=OOJhKhAJc8twYeJUgw0STtXu0E" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+          <!--<p>-<b>Play Now</b> <a href="ttps://kiga-studio.itch.io/zombie-hunter-web?secret=OOJhKhAJc8twYeJUgw0STtXu0E" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>-->
           <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
@@ -39,7 +39,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/zombiehunter/Screenshot 11-05-2024 223544.jpg" class="d-block w-100" alt="...">
+      <img src="img/zombiehunter/Screenshot 28-11-2024 090818.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
