--- a/index.html
+++ b/index.html
@@ -231,6 +231,23 @@
 
           <div class="col">
             <div class="card shadow-sm styleUpdate">
+              <img src="img/zombiehunter/Screenshot 28-11-2024 090818.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-success reggae-one-regular gameTitle">Zombie Hunter</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="ZombieHunter.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/zombie-hunter?secret=XR3MdPznFBKgdnFD0Ctm5qMjo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleUpdate">
               <img src="img/hiddenblock/Screenshot 08-09-2024 214839.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text-success reggae-one-regular gameTitle">Hidden Block</h3>
@@ -293,24 +310,6 @@
                   <div class="btn-group">
                     <a href="KitchenChaos.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/kitchen-chaos?secret=tSPEvQU8eWGQw4KS2ECKvLQsCY8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleHot">
-              <img src="img/zombiehunter/Screenshot 11-05-2024 223544.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-warning reggae-one-regular gameTitle">Zombie Hunter</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="ZombieHunter.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/zombie-hunter?secret=XR3MdPznFBKgdnFD0Ctm5qMjo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                    <a href="https://kiga-studio.itch.io/zombie-hunter-web?secret=OOJhKhAJc8twYeJUgw0STtXu0E" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
