--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <main class="">
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <img src="img/highparkour/Screenshot 22-11-2024 191934.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
 
@@ -75,8 +75,8 @@
 
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/panicpictures/462568105_1625317988058233_5191426092903613004_n.png" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/onenightatplutolab/Screenshot 01-12-2024 105507.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
 
           </div>
@@ -154,6 +154,23 @@
                   <div class="btn-group">
                     <a href="GrandThiefManual.htmll"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/grand-thief-manual?secret=wi8uIchmwFkTruyz2VbXt9RTh4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/onenightatplutolab/Screenshot 01-12-2024 105507.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">One Night At Pluto Lab</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="OneNightAtPlutoLab.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/one-night-at-pluto-lab?secret=GcmnnQlrPlZCgEFRtE7OWw7yJE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
