--- a/WaifuDefense.html
+++ b/WaifuDefense.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/style2.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png">
-    <title>Pass The Way</title>
+    <title>Waifu Defense</title>
 </head>
 <body>
 <div class="row">
@@ -17,18 +17,18 @@
     </div>
     <div class="bg-danger-subtle infoGame">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>Pass The Way</b></p>
-      <p>-<b>Giới thiệu</b>: Thử thách qua đường</p>
+      <p style="text-align: center;"><b>Waifu Defense</b></p>
+      <p>-<b>Giới thiệu</b>: Bảo vệ waifu bằng cả máy móc :))</p>
       <p>-<b>Phiên bản</b>: 1.0</p>
-      <p>-<b>Phát hành</b>: 7/12/2024</p>
-      <p>-<b>Last Update</b>: 7/12/2024</p>
-      <p>-<b>Thể loại</b>: Single</p>
+      <p>-<b>Phát hành</b>: 9/12/2024</p>
+      <p>-<b>Last Update</b>: 9/12/2024</p>
+      <p>-<b>Thể loại</b>: Defense</p>
       <p>-<b>Available</b>: PC</p>
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
       <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
-        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/pass-the-way?secret=g4hA47pycJ4xhsgZrJRkfg1HlIY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/waifu-defense?secret=O3NEpHVkt6FtmK1VS9tEfC1aZ8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
         <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
@@ -38,7 +38,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/passtheway/Screenshot 07-12-2024 214202.jpg" class="d-block w-100" alt="...">
+      <img src="img/waifudefense/Screenshot 09-12-2024 224609.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
