--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/redandblue/bKwaDZ.png" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/waifudefense/Screenshot 09-12-2024 224609.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <img src="img/passtheway/Screenshot 07-12-2024 214202.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -161,6 +161,23 @@
                   <div class="btn-group">
                     <a href="GrandThiefManual.htmll"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/grand-thief-manual?secret=wi8uIchmwFkTruyz2VbXt9RTh4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/waifudefense/Screenshot 09-12-2024 224609.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-info reggae-one-regular gameTitle">Waifu Defense</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="WaifuDefense.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/waifu-defense?secret=O3NEpHVkt6FtmK1VS9tEfC1aZ8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -271,23 +288,6 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/rareracing/Screenshot 09-11-2024 102916.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info reggae-one-regular gameTitle">Rare Racing</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="RareRacing.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/rare?secret=PFDtJCQQ4dXhSlOk0EDcKMA4o20" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
             <div class="card shadow-sm styleUpdate">
               <img src="img/zombiehunter/Screenshot 28-11-2024 090818.jpg" height="225"> 
               <div class="card-body">
@@ -333,6 +333,23 @@
                     <a href="SoloShooting.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/solo-shooting?secret=y1W1iWnmzzMaTGb7W12uf4ozQ4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/solo-shooting-web?secret=7YC0PwofQVjnk980AoMnrP7eQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleHot">
+              <img src="img/rareracing/Screenshot 09-11-2024 102916.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-warning reggae-one-regular gameTitle">Rare Racing</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="RareRacing.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/rare?secret=PFDtJCQQ4dXhSlOk0EDcKMA4o20" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
