--- a/OneNightAtPlutoLab.html
+++ b/OneNightAtPlutoLab.html
@@ -29,7 +29,8 @@
       <h3 style="text-align:center">Link</h3>
       <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
         <p>-<b>Download Now</b>: <a href="ttps://kiga-studio.itch.io/one-night-at-pluto-lab?secret=GcmnnQlrPlZCgEFRtE7OWw7yJE"" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-        <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
+          <p>-<b>Play Now</b> <a href="https://kiga-studio.itch.io/one-night-at-pluto-lab-web?secret=NdkjK8FNgZTvBNMUarBbez0MJQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+          <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
 <div id="carouselExampleIndicators" class="bg-dark carousel slide col-md-10 bg-dark col-md-2">
