--- a/index.html
+++ b/index.html
@@ -221,23 +221,6 @@
 
           <div class="col">
             <div class="card shadow-sm styleNew">
-              <img src="img/onenightatplutolab/Screenshot 01-12-2024 105507.jpg" height="225"> 
-              <div class="card-body">
-                <h4 class="text-info reggae-one-regular gameTitle">One Night At Pluto Lab</h4>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="OneNightAtPlutoLab.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/one-night-at-pluto-lab?secret=GcmnnQlrPlZCgEFRtE7OWw7yJE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleNew">
               <img src="img/highparkour/Screenshot 22-11-2024 191934.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text-info reggae-one-regular gameTitle">High Parkour</h3>
@@ -280,6 +263,25 @@
                   <div class="btn-group">
                     <a href="PanicPictures.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/panic-putures?secret=r0TKI7eC3LxEWXJzhOU4auOBgvk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          
+          <div class="col">
+            <div class="card shadow-sm styleUpdate">
+              <img src="img/onenightatplutolab/Screenshot 01-12-2024 105507.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-success reggae-one-regular gameTitle">One Night At Pluto Lab</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="OneNightAtPlutoLab.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/one-night-at-pluto-lab?secret=GcmnnQlrPlZCgEFRtE7OWw7yJE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/one-night-at-pluto-lab-web?secret=NdkjK8FNgZTvBNMUarBbez0MJQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
