--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
 
           <div class="col">
             <div class="card shadow-sm styleBig">
-              <img src="img/truykid/Screenshot 24-11-2024 081220.jpg" height="225"> 
+              <img src="img/kitchenchaos/Screenshot 09-06-2024 232324.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-danger reggae-one-regular gameTitle">Truy Kid</h3>
+                <h3 class="text-danger reggae-one-regular gameTitle">Kitchen Chaos</h3>
                 <p class="card-text"></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="TruyKid.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/truy-kid?secret=h3c0pPvFZDKMpO7NC8X9WXU1XU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="KitchenChaos.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/kitchen-chaos?secret=tSPEvQU8eWGQw4KS2ECKvLQsCY8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -153,14 +153,14 @@
 
           <div class="col">
             <div class="card shadow-sm styleBig">
-              <img src="img/gtm/Screenshot 16-11-2024 105010.jpg" height="225"> 
+              <img src="img/truykid/Screenshot 24-11-2024 081220.jpg" height="225"> 
               <div class="card-body">
-                <h4 class="text-danger reggae-one-regular gameTitle">Grand Thief Manual (Beta)</h4>
+                <h3 class="text-danger reggae-one-regular gameTitle">Truy Kid</h3>
                 <p class="card-text"></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <a href="GrandThiefManual.htmll"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/grand-thief-manual?secret=wi8uIchmwFkTruyz2VbXt9RTh4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="TruyKid.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/truy-kid?secret=h3c0pPvFZDKMpO7NC8X9WXU1XU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -287,24 +287,6 @@
               </div>
             </div>
           </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/panicpictures/462568105_1625317988058233_5191426092903613004_n.png" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info reggae-one-regular gameTitle">Panic Pictures</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="PanicPictures.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/panic-putures?secret=r0TKI7eC3LxEWXJzhOU4auOBgvk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
           
           <div class="col">
             <div class="card shadow-sm styleUpdate">
@@ -361,6 +343,23 @@
 
           <div class="col">
             <div class="card shadow-sm styleHot">
+              <img src="img/panicpictures/462568105_1625317988058233_5191426092903613004_n.png" height="225"> 
+              <div class="card-body">
+                <h3 class="text-warning reggae-one-regular gameTitle">Panic Pictures</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="PanicPictures.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/panic-putures?secret=r0TKI7eC3LxEWXJzhOU4auOBgvk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleHot">
               <img src="img/rareracing/Screenshot 09-11-2024 102916.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text-warning reggae-one-regular gameTitle">Rare Racing</h3>
@@ -387,23 +386,6 @@
                     <a href="SpaceSpector.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/space-spector?secret=J4A0qnrmVtvs4Aq4hGn9Fho4Nk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/space-spector-web?secret=UPgG2XaKDgXYX2nFOHvvJf6Vgig" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleHot">
-              <img src="img/kitchenchaos/Screenshot 09-06-2024 232324.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-warning reggae-one-regular gameTitle">Kitchen Chaos</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="KitchenChaos.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/kitchen-chaos?secret=tSPEvQU8eWGQw4KS2ECKvLQsCY8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -478,6 +460,23 @@
                     <a href="download/KOutplayed!.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free </small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/gtm/Screenshot 16-11-2024 105010.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text reggae-one-regular gameTitle">Grand Thief Manual (Beta)</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="GrandThiefManual.htmll"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/grand-thief-manual?secret=wi8uIchmwFkTruyz2VbXt9RTh4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
