--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/passtheway/Screenshot 07-12-2024 214202.jpg" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/epicbrawl/Screenshot 27-01-2025 165717.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
-        <div class="carousel-item active"> 
+        <div class="carousel-item"> 
           <img src="img/whoisfaker/Screenshot 16-01-2025 203823.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
           </div>
@@ -108,7 +108,7 @@
         </div>
         <div class="col">
           <h1 class="fw-light press-start">Kiga Games</h1> <br>
-          <p class="lead text-y text-danger reggae-one-regular ">Red: Big Game</p>
+          <p class="lead text-y text-danger reggae-one-regular ">Red: Online Game</p>
           <p class="lead text-y text-info reggae-one-regular ">Blue: New Game</p>
           <p class="lead text-y text-success reggae-one-regular ">Green: Updated Game</p>
           <p class="lead text-y text-warning reggae-one-regular ">Yellow: Hot Game</p> 
@@ -133,6 +133,24 @@
       <div class="container">
         <h1 class="fw-light press-start text-center text-white styleHeader">Game Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">
+            <div class="card shadow-sm styleBig">
+              <img src="img/epicbrawl/Screenshot 27-01-2025 165717.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-danger reggae-one-regular gameTitle">Epic Brawl</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="EpicBrawl.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/epic-brawl?secret=bQEjF3BDJcbYIB7CF9OzmjagY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col">
             <div class="card shadow-sm styleBig">
               <img src="img/whoisfaker/Screenshot 16-01-2025 203823.jpg" height="225"> 
@@ -177,6 +195,23 @@
                   <div class="btn-group">
                     <a href="TruyKid.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/truy-kid?secret=h3c0pPvFZDKMpO7NC8X9WXU1XU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleBig">
+              <img src="img/highparkour/Screenshot 22-11-2024 191934.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-danger reggae-one-regular gameTitle">High Parkour</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="PanicPictures.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/high-parkour?secret=X4EgG4LYhHHkWHBoPsAhbyzMQa8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -246,57 +281,6 @@
                   <div class="btn-group">
                     <a href="PassTheWay.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/pass-the-way?secret=g4hA47pycJ4xhsgZrJRkfg1HlIY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/nottennistime/Screenshot 06-12-2024 113020.jpg" height="225"> 
-              <div class="card-body">
-                <h4 class="text-info reggae-one-regular gameTitle">Not Tennis Time</h4>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="NotTennisTime.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/not-tennis-time?secret=KYpV5fG5PjGVnsFTA4mhjnH4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/highparkour/Screenshot 22-11-2024 191934.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info reggae-one-regular gameTitle">High Parkour</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="PanicPictures.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/high-parkour?secret=X4EgG4LYhHHkWHBoPsAhbyzMQa8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/redandblue/bKwaDZ.png" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info reggae-one-regular gameTitle">Red & Blue</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="PanicPictures.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/red-blue?secret=3dpMekGGLocO7gix5JPdnudRHI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -476,6 +460,40 @@
                     <a href="download/KOutplayed!.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free </small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/nottennistime/Screenshot 06-12-2024 113020.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text reggae-one-regular gameTitle">Not Tennis Time</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="NotTennisTime.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/not-tennis-time?secret=KYpV5fG5PjGVnsFTA4mhjnH4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/redandblue/bKwaDZ.png" height="225"> 
+              <div class="card-body">
+                <h3 class="text reggae-one-regular gameTitle">Red & Blue</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="PanicPictures.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/red-blue?secret=3dpMekGGLocO7gix5JPdnudRHI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
