--- a/Kabide.html
+++ b/Kabide.html
@@ -17,18 +17,18 @@
     </div>
     <div class="bg-danger-subtle">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>Epic Brawl</b></p>
-      <p>-<b>Giới thiệu</b>: Hero shooter</p>
+      <p style="text-align: center;"><b>Kabide</b></p>
+      <p>-<b>Giới thiệu</b>: Balatro + Yugioh</p>
       <p>-<b>Phiên bản</b>: 1.0</p>
-      <p>-<b>Phát hành</b>: 27/01/2025</p>
-      <p>-<b>Last Update</b>: 27/01/2025</p>
-      <p>-<b>Thể loại</b>: Multiplayer</p>
+      <p>-<b>Phát hành</b>: 09/03/2025</p>
+      <p>-<b>Last Update</b>: 09/03/2025</p>
+      <p>-<b>Thể loại</b>: Singleplayer</p>
       <p>-<b>Available</b>: PC</p>
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
       <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
-        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/epic-brawl?secret=bQEjF3BDJcbYIB7CF9OzmjagY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/kabide?secret=Le4thvvo4sKD29e58wg3m585Z4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
       <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
@@ -38,7 +38,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/epicbrawl/Screenshot 27-01-2025 165717.jpg" class="d-block w-100" alt="...">
+      <img src="img/kabide/Screenshot 09-03-2025 212004.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
