--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
             <div class="card shadow-sm styleNew">
               <img src="img/cssgo/Screenshot 01-04-2025 120450.jpg" height="225"> 
               <div class="card-body">
-                <h4 class="text-info reggae-one-regular gameTitle">CSSGO (Bugged)</h4>
+                <h4 class="text-info reggae-one-regular gameTitle">CSSGO</h4>
                 <p class="card-text"></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="CSSGO.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a hidden href="https://kiga-studio.itch.io/cssgo?secret=wnmjcxFDkux485GbMFp86fnwpQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/cssgo?secret=wnmjcxFDkux485GbMFp86fnwpQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
