--- a/index.html
+++ b/index.html
@@ -188,6 +188,23 @@
 
           <div class="col">
             <div class="card shadow-sm styleUpdate">
+              <img src="img/rareracing/Screenshot 09-11-2024 102916.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-success reggae-one-regular gameTitle">Rare Racing</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="RareRacing.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/rare?secret=PFDtJCQQ4dXhSlOk0EDcKMA4o20" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleUpdate">
               <img src="img/kabide/Screenshot 09-03-2025 212004.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text-success reggae-one-regular gameTitle">Kabide</h3>
@@ -214,24 +231,6 @@
                     <a href="SpaceSpector.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/space-spector?secret=J4A0qnrmVtvs4Aq4hGn9Fho4Nk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/space-spector-web?secret=UPgG2XaKDgXYX2nFOHvvJf6Vgig" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-          
-          <div class="col">
-            <div class="card shadow-sm styleUpdate">
-              <img src="img/onenightatplutolab/Screenshot 01-12-2024 105507.jpg" height="225"> 
-              <div class="card-body">
-                <h4 class="text-success reggae-one-regular gameTitle">One Night At Pluto Lab</h4>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="OneNightAtPlutoLab.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/one-night-at-pluto-lab?secret=GcmnnQlrPlZCgEFRtE7OWw7yJE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                    <a href="https://kiga-studio.itch.io/one-night-at-pluto-lab-web?secret=NdkjK8FNgZTvBNMUarBbez0MJQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -343,23 +342,6 @@
 
           <div class="col">
             <div class="card shadow-sm styleHot">
-              <img src="img/rareracing/Screenshot 09-11-2024 102916.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-warning reggae-one-regular gameTitle">Rare Racing</h3>
-                <p class="card-text"></p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="RareRacing.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/rare?secret=PFDtJCQQ4dXhSlOk0EDcKMA4o20" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleHot">
               <img src="img/lowparkour.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text-warning reggae-one-regular gameTitle">Low Parkour</h3>
@@ -425,6 +407,24 @@
                     <a href="download/KOutplayed!.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free </small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleHot">
+              <img src="img/onenightatplutolab/Screenshot 01-12-2024 105507.jpg" height="225"> 
+              <div class="card-body">
+                <h4 class="text-warning reggae-one-regular gameTitle">One Night At Pluto Lab</h4>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="OneNightAtPlutoLab.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/one-night-at-pluto-lab?secret=GcmnnQlrPlZCgEFRtE7OWw7yJE" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/one-night-at-pluto-lab-web?secret=NdkjK8FNgZTvBNMUarBbez0MJQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
                 </div>
               </div>
             </div>
